--- a/Scoring/Scoring.csproj
+++ b/Scoring/Scoring.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Player.Designer.cs">
       <DependentUpon>Player.cs</DependentUpon>
     </Compile>
+    <Compile Include="PlayerHistory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Board.cs">
