--- a/Scoring/Scoring.csproj
+++ b/Scoring/Scoring.csproj
@@ -61,14 +61,14 @@
     <Compile Include="PlayerHistory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Board.cs">
+    <Compile Include="Dart.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Board.Designer.cs">
-      <DependentUpon>Board.cs</DependentUpon>
+    <Compile Include="Dart.Designer.cs">
+      <DependentUpon>Dart.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Board.resx">
-      <DependentUpon>Board.cs</DependentUpon>
+    <EmbeddedResource Include="Dart.resx">
+      <DependentUpon>Dart.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Darts.resx">
       <DependentUpon>Darts.cs</DependentUpon>
